# student_system

./: CMakeLists.txt  m.cpp  run.sh  student.h
vsproj/: vsproj.sln
vsproj/vsproj/: attendance.cpp  attendance.h  main.cpp  model.xml  public.h  recognization.cpp  recognization.h  vsproj.vcxproj  vsproj.vcxproj.filters
